// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scatterPlots with empty data renders correct html, has componentDidMount triggered 1`] = `
<div>
  <div
    id="scatterPlots"
  >
    <svg
      align="center"
      height="500"
      width="600"
    >
      <g
        class="axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(100, 400)"
      >
        <path
          class="domain"
          d="M0.5,6V0.5H300.5V6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(150.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            0
          </text>
        </g>
      </g>
      <g
        class="axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(100, 100)"
      >
        <path
          class="domain"
          d="M-6,300.5H0.5V0.5H-6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,150.5)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            0
          </text>
        </g>
      </g>
    </svg>
    <div
      class="tooltip"
      style="opacity: 0;"
    />
  </div>
</div>
`;

exports[`scatterPlots with input data renders correct html 1`] = `
<div>
  <div
    id="scatterPlots"
  >
    <svg
      align="center"
      height="500"
      width="600"
    >
      <g
        class="axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(100, 400)"
      >
        <path
          class="domain"
          d="M0.5,6V0.5H300.5V6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(27.16666666666666,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            -2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(60.49999999999999,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(93.83333333333333,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(127.16666666666667,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(160.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(193.83333333333331,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(227.16666666666666,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(260.5,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            12
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(293.83333333333337,0)"
        >
          <line
            stroke="currentColor"
            y2="6"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="9"
          >
            14
          </text>
        </g>
      </g>
      <g
        class="axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(100, 100)"
      >
        <path
          class="domain"
          d="M-6,300.5H0.5V0.5H-6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,294.0064935064935)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            -2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,261.538961038961)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,229.07142857142856)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,196.6038961038961)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,164.13636363636363)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,131.66883116883113)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,99.20129870129865)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,66.73376623376619)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            12
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,34.26623376623375)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            14
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,1.7987012987012547)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            16
          </text>
        </g>
      </g>
      <circle
        cx="178.33333333333331"
        cy="341.5584415584416"
        fill="goldEnrod"
        r="5"
      />
      <circle
        cx="198.33333333333331"
        cy="320.45454545454544"
        fill="goldEnrod"
        r="5"
      />
      <circle
        cx="253.33333333333331"
        cy="232.79220779220776"
        fill="goldEnrod"
        r="5"
      />
      <circle
        cx="360"
        cy="143.50649350649343"
        fill="goldEnrod"
        r="5"
      />
      <circle
        cx="110"
        cy="393.5064935064935"
        fill="goldEnrod"
        r="5"
      />
    </svg>
    <div
      class="tooltip"
      style="opacity: 0;"
    />
  </div>
</div>
`;
